# PMPatch

./: CMakeLists.txt  README  README.md  main.c  module.c  module.h  patch.c  patch.h  patch_int.h  pmpatch.c  pmpatch.pro
Common/: BaseTypes.h  ProcessorBind.h  UefiBaseTypes.h
EDK2/: BaseTypes.h  CommonLib.h  Compress.h  Decompress.h  EfiUtilityMsgs.h  UefiBaseTypes.h
LZMA/: LzmaCompress.c  LzmaCompress.h  LzmaDecompress.c  LzmaDecompress.h  UefiLzma.h
LZMA/SDK/C/: LzmaEnc.c  Types.h
Tiano/: TianoCompress.c  TianoCompress.h  TianoDecompress.c  TianoDecompress.h
